--- a/app/src/main/res/layout/leaderboard.xml
+++ b/app/src/main/res/layout/leaderboard.xml
@@ -21,18 +21,28 @@
         android:id="@+id/imageView4"
         android:layout_width="417dp"
         android:layout_height="654dp"
-        app:layout_constraintBottom_toBottomOf="@+id/leaderboardData"
+        android:layout_marginTop="72dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.666"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageView3"
         app:srcCompat="@drawable/leaderboard2" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/leaderboardData"
-        android:layout_width="413dp"
-        android:layout_height="612dp"
-        android:layout_marginTop="120dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        android:layout_width="415dp"
+        android:layout_height="624dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+
+    <Button
+        android:id="@+id/Menu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:text="Menu"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.816" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
