--- a/app/src/main/res/layout/activity_game_play.xml
+++ b/app/src/main/res/layout/activity_game_play.xml
@@ -43,23 +43,19 @@
         app:layout_constraintVertical_bias="0.872" />
 
     <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/jawaban"
         android:layout_width="409dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="200dp"
+        android:background="#F4F4F4"
+        android:hint="Type Here...."
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintStart_toStartOf="parent">
 
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="hint" />
     </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputEditText
-        android:layout_width="352dp"
-        android:layout_height="42dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginBottom="184dp"
-        android:background="@color/cardview_light_background"
-        android:backgroundTint="#FFFFFF"
-        android:hint="Type here...."
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
