--- a/app/src/main/res/layout/postgame.xml
+++ b/app/src/main/res/layout/postgame.xml
@@ -47,7 +47,7 @@
         android:id="@+id/wpmView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="WPM : "
+        android:text="Anda : "
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/nameView"
         app:layout_constraintEnd_toEndOf="parent"
@@ -72,7 +72,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/hasil"
         android:layout_width="79dp"
         android:layout_height="30dp"
         android:layout_marginStart="148dp"
